--- a/src/relatorios/Balanco.jrxml
+++ b/src/relatorios/Balanco.jrxml
@@ -4,6 +4,10 @@
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="EJBAdapter.xml"/>
 	<property name="com.jaspersoft.studio.property.dataset.dialog.DatasetDialog.sash.w1" value="486"/>
 	<property name="com.jaspersoft.studio.property.dataset.dialog.DatasetDialog.sash.w2" value="500"/>
+	<parameter name="funcionario" class="java.lang.String"/>
+	<parameter name="data1" class="java.lang.String"/>
+	<parameter name="data2" class="java.lang.String"/>
+	<parameter name="logo" class="java.lang.String"/>
 	<queryString language="ejbql">
 		<![CDATA[select c from Caixa c]]>
 	</queryString>
@@ -53,7 +57,7 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="54" splitType="Stretch">
+		<band height="62" splitType="Stretch">
 			<staticText>
 				<reportElement positionType="Float" x="319" y="10" width="235" height="30" uuid="f87768be-3161-46e3-acd2-4d508daa25ec"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
@@ -62,15 +66,15 @@
 				<text><![CDATA[Entradas e Saídas]]></text>
 			</staticText>
 			<image>
-				<reportElement x="10" y="0" width="60" height="54" uuid="3e91e5f9-2977-4be0-8545-e0e6045e3d54"/>
-				<imageExpression><![CDATA["/home/bianca/Documentos/SIGAM/SIGAM/src/view/images/favicon2.png"]]></imageExpression>
+				<reportElement x="0" y="4" width="60" height="54" uuid="3e91e5f9-2977-4be0-8545-e0e6045e3d54"/>
+				<imageExpression><![CDATA[$P{logo}]]></imageExpression>
 			</image>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="39" splitType="Stretch">
+		<band height="48" splitType="Stretch">
 			<textField pattern="d/M/yy">
-				<reportElement x="470" y="0" width="85" height="19" uuid="0b8e085e-051b-4658-a66d-7fb695068e86"/>
+				<reportElement x="469" y="0" width="85" height="19" uuid="0b8e085e-051b-4658-a66d-7fb695068e86"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -83,7 +87,7 @@
 				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="390" y="0" width="80" height="19" uuid="1bd83084-76c2-4e4f-9abb-4441754bf8c0"/>
+				<reportElement x="389" y="0" width="80" height="19" uuid="1bd83084-76c2-4e4f-9abb-4441754bf8c0"/>
 				<box>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -95,18 +99,40 @@
 				</textElement>
 				<text><![CDATA[Gerado em]]></text>
 			</staticText>
+			<textField>
+				<reportElement x="0" y="0" width="170" height="19" uuid="59c66a18-59e9-4bf8-815c-9db1de65d7d7"/>
+				<textElement verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA["Gerado por "+$P{funcionario}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="0" y="20" width="90" height="22" uuid="2cea2146-483a-4073-8f45-8cbef1eb006d"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$P{data1}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="90" y="20" width="16" height="20" uuid="65cc9779-75a6-4785-9473-8ae4336603c7"/>
+				<textElement textAlignment="Center">
+					<font size="11"/>
+				</textElement>
+				<text><![CDATA[_]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="106" y="20" width="100" height="22" uuid="03d10899-905a-4269-b652-9d3d54f3315e"/>
+				<textElement verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$P{data2}]]></textFieldExpression>
+			</textField>
 		</band>
 	</pageHeader>
 	<detail>
-		<band height="295" splitType="Stretch">
+		<band height="247" splitType="Stretch">
 			<rectangle>
-				<reportElement positionType="Float" x="368" y="240" width="186" height="40" backcolor="#FFF1DE" uuid="e9b6a756-f530-4c8b-b944-3a75c8004465"/>
+				<reportElement positionType="Float" x="364" y="180" width="186" height="40" backcolor="#FFF1DE" uuid="e9b6a756-f530-4c8b-b944-3a75c8004465"/>
 				<graphicElement>
 					<pen lineWidth="0.0"/>
 				</graphicElement>
 			</rectangle>
 			<rectangle>
-				<reportElement positionType="Float" stretchType="ContainerHeight" x="0" y="0" width="554" height="40" backcolor="#FFD8AB" uuid="8ba87978-0fc6-4966-a34f-e3d7aa9673bf"/>
+				<reportElement positionType="Float" stretchType="ContainerHeight" x="0" y="0" width="554" height="50" backcolor="#FFD8AB" uuid="8ba87978-0fc6-4966-a34f-e3d7aa9673bf"/>
 				<graphicElement>
 					<pen lineWidth="0.0"/>
 				</graphicElement>
@@ -119,21 +145,14 @@
 				<textFieldExpression><![CDATA[$F{data}]]></textFieldExpression>
 			</textField>
 			<textField pattern="HH:mm a">
-				<reportElement x="456" y="20" width="100" height="20" uuid="b4db6f5b-0374-4ef5-bf79-60c6669078ab"/>
-				<textElement verticalAlignment="Middle">
-					<font size="10" isBold="false"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{hrAbertura}]]></textFieldExpression>
-			</textField>
-			<textField pattern="HH:mm a">
-				<reportElement x="455" y="0" width="100" height="20" uuid="39d8b1b5-55fa-4e03-80c0-6ffccb7bf6f6"/>
+				<reportElement x="454" y="20" width="100" height="20" uuid="39d8b1b5-55fa-4e03-80c0-6ffccb7bf6f6"/>
 				<textElement verticalAlignment="Middle">
 					<font size="10" isBold="false"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{hrFechamento}]]></textFieldExpression>
 			</textField>
-			<subreport>
-				<reportElement positionType="FixRelativeToBottom" x="0" y="40" width="555" height="100" uuid="a427ced8-f79b-4a26-9a06-72df3c6104d7"/>
+			<subreport isUsingCache="true">
+				<reportElement positionType="Float" x="0" y="60" width="555" height="60" uuid="a427ced8-f79b-4a26-9a06-72df3c6104d7"/>
 				<subreportParameter name="codCaixa">
 					<subreportParameterExpression><![CDATA[$F{codigo}]]></subreportParameterExpression>
 				</subreportParameter>
@@ -141,7 +160,7 @@
 				<subreportExpression><![CDATA["src/relatorios/Despesas.jasper"]]></subreportExpression>
 			</subreport>
 			<subreport>
-				<reportElement x="0" y="140" width="555" height="95" uuid="be4f1f2a-3ddb-42c6-9f7a-cf35177f511f"/>
+				<reportElement positionType="Float" x="0" y="120" width="555" height="59" uuid="be4f1f2a-3ddb-42c6-9f7a-cf35177f511f"/>
 				<subreportParameter name="codCaixa">
 					<subreportParameterExpression><![CDATA[$F{codigo}]]></subreportParameterExpression>
 				</subreportParameter>
@@ -170,74 +189,102 @@
 				<text><![CDATA[Horário de abertura]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="321" y="20" width="124" height="20" uuid="e0b90c63-f005-40a1-88a4-0bc5041bc053"/>
+				<reportElement x="300" y="20" width="145" height="20" uuid="e0b90c63-f005-40a1-88a4-0bc5041bc053"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Horário de fechamento]]></text>
 			</staticText>
 			<textField pattern="¤#,##0.00;¤-#,##0.00">
-				<reportElement positionType="Float" x="444" y="240" width="110" height="20" uuid="aef5781e-035c-44d7-9d4a-0f9e3cb5604e"/>
+				<reportElement positionType="Float" x="440" y="180" width="110" height="20" uuid="aef5781e-035c-44d7-9d4a-0f9e3cb5604e"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{saidas}]]></textFieldExpression>
 			</textField>
 			<textField pattern="¤#,##0.00;¤-#,##0.00">
-				<reportElement positionType="Float" x="444" y="260" width="110" height="20" uuid="4ab27054-837c-4887-a4b6-d434e6382a4d"/>
+				<reportElement positionType="Float" x="440" y="200" width="110" height="20" uuid="4ab27054-837c-4887-a4b6-d434e6382a4d"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{entradas}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement positionType="Float" x="368" y="260" width="66" height="20" uuid="14949e18-0e87-4dc1-8319-d8511bc7ac9c"/>
+				<reportElement positionType="Float" x="364" y="200" width="66" height="20" uuid="14949e18-0e87-4dc1-8319-d8511bc7ac9c"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Entradas]]></text>
 			</staticText>
 			<staticText>
-				<reportElement positionType="Float" x="368" y="240" width="66" height="20" uuid="7a46573f-4aee-4b09-97ae-3390956ef8e3"/>
+				<reportElement positionType="Float" x="364" y="180" width="66" height="20" uuid="7a46573f-4aee-4b09-97ae-3390956ef8e3"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Saidas]]></text>
 			</staticText>
 			<textField evaluationTime="Report">
-				<reportElement x="110" y="20" width="211" height="20" uuid="e21df8e4-57b1-432f-a3d6-e5d17f3bd6f1"/>
+				<reportElement x="110" y="20" width="200" height="20" uuid="e21df8e4-57b1-432f-a3d6-e5d17f3bd6f1"/>
 				<textElement verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{secretario}.getNome()]]></textFieldExpression>
+			</textField>
+			<textField pattern="HH:mm a">
+				<reportElement x="454" y="0" width="100" height="20" uuid="b4db6f5b-0374-4ef5-bf79-60c6669078ab"/>
+				<textElement verticalAlignment="Middle">
+					<font size="10" isBold="false"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{hrAbertura}]]></textFieldExpression>
 			</textField>
 		</band>
 	</detail>
 	<pageFooter>
-		<band height="93" splitType="Stretch">
+		<band height="60" splitType="Stretch">
 			<textField>
-				<reportElement positionType="Float" x="420" y="50" width="135" height="19" uuid="e193cf71-43d8-4740-a3f1-fb832aff2ba4"/>
+				<reportElement x="354" y="30" width="100" height="30" uuid="8c725be4-88d4-47fc-b58b-5caaa3d793e3"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Página " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
-			<textField pattern="¤#,##0.00;¤-#,##0.00">
-				<reportElement positionType="Float" x="140" y="0" width="150" height="20" uuid="fefa9fda-4efe-451f-9f6f-ddc382978f33"/>
+			<textField evaluationTime="Report">
+				<reportElement x="454" y="30" width="100" height="30" uuid="c812e296-f815-44b2-b54b-2909fa4d1e97"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$V{entradas1}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[" de " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
-			<textField pattern="¤#,##0.00;¤-#,##0.00">
-				<reportElement positionType="Float" x="140" y="19" width="150" height="20" uuid="3a4e27d7-bdc4-4329-901c-64702ade130f"/>
-				<textElement textAlignment="Left" verticalAlignment="Middle"/>
-				<textFieldExpression><![CDATA[$V{saidas1}]]></textFieldExpression>
-			</textField>
+		</band>
+	</pageFooter>
+	<summary>
+		<band height="71">
 			<staticText>
-				<reportElement positionType="Float" x="0" y="19" width="130" height="21" uuid="63dee0e5-1c61-4c0a-a525-e15d35da09f3"/>
-				<textElement textAlignment="Right" verticalAlignment="Middle">
-					<font isBold="true"/>
-				</textElement>
-				<text><![CDATA[TOTAL DE ENTRADAS]]></text>
-			</staticText>
-			<staticText>
-				<reportElement positionType="Float" x="0" y="0" width="130" height="20" uuid="babe6a22-0bfd-4353-8944-9595dacaede5"/>
+				<reportElement positionType="Float" x="-10" y="8" width="130" height="20" uuid="babe6a22-0bfd-4353-8944-9595dacaede5"/>
 				<textElement textAlignment="Right" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[TOTAL DE SAÍDAS]]></text>
 			</staticText>
+			<textField pattern="¤#,##0.00;¤-#,##0.00">
+				<reportElement positionType="Float" x="130" y="8" width="150" height="20" uuid="fefa9fda-4efe-451f-9f6f-ddc382978f33"/>
+				<textElement textAlignment="Left" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$V{entradas1}]]></textFieldExpression>
+			</textField>
+			<textField pattern="¤#,##0.00;¤-#,##0.00">
+				<reportElement positionType="Float" x="130" y="27" width="150" height="20" uuid="3a4e27d7-bdc4-4329-901c-64702ade130f"/>
+				<textElement textAlignment="Left" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$V{saidas1}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement positionType="Float" x="-10" y="27" width="130" height="21" uuid="63dee0e5-1c61-4c0a-a525-e15d35da09f3"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[TOTAL DE ENTRADAS]]></text>
+			</staticText>
+			<textField pattern="¤#,##0.00;¤-#,##0.00">
+				<reportElement x="130" y="50" width="220" height="20" uuid="0141061e-001e-4802-9805-06e64e2ea604"/>
+				<textElement verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$V{entradas1} - $V{saidas1}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement positionType="Float" x="-10" y="50" width="130" height="21" uuid="ac45945d-cb9a-4c88-8f11-d94912c2b0ec"/>
+				<textElement textAlignment="Right" verticalAlignment="Middle">
+					<font isBold="true"/>
+				</textElement>
+				<text><![CDATA[LUCRO]]></text>
+			</staticText>
 		</band>
-	</pageFooter>
+	</summary>
 </jasperReport>
